# data-infra

./: .env.example  .gitignore  CLAUDE.md  biome.json  deploy.sh  memo.md  ops-reference.md  ops.md  package.json  pnpm-lock.yaml  postgres_table.md  pyproject.toml  turbo.json
.claude/: settings.local.json
apps/api/: .dev.vars.example  (+4 more)
domains/discord/ingestion/: .env.example  PROFILE_BACKFILL_RUNBOOK.md  config.backfill-053.yaml  config.yaml  profile_backfill_worker.py  pyproject.toml  temp
domains/discord/ingestion/dags/: discord_daily.py
domains/discord/ingestion/src/discord_etl/: cli.py  client.py  collector.py  config.py  d1.py  logging_config.py  models.py  r2.py  transformer.py
domains/discord/ingestion/tests/: conftest.py  test_cli.py  test_cli_profiles.py  test_client.py  test_collector.py  test_config.py  test_d1.py  test_d1_profiles.py  test_dag.py  test_models.py  test_r2.py  test_transformer.py
domains/github/ingestion/: .dockerignore  .env.example  Dockerfile  compose.yaml  config.yaml  pyproject.toml
domains/github/ingestion/.airflow-home/: airflow.cfg
domains/github/ingestion/dags/: cloudflare_usage_hourly.py  github_archive_daily.py  github_rest_api_hourly.py
domains/github/ingestion/src/gharchive_etl/: anomaly.py  catalog_sync.py  cli.py  cloudflare_usage.py  config.py  d1.py  dl_models.py  downloader.py  enrichment.py  enrichment_r2.py  filter.py  github_api.py  logging_config.py  models.py  notify.py  quality.py  r2.py  rest_api_collector.py  transformer.py
domains/github/ingestion/tests/: conftest.py  test_anomaly.py  test_catalog_sync.py  test_cli_fetch.py  test_cli_rest_fetch.py  test_cloudflare_usage.py  test_config.py  test_d1.py  test_dag.py  test_downloader.py  test_enrich_cli.py  test_enrichment.py  test_enrichment_r2.py  test_filter.py  test_github_api.py  test_models.py  test_notify.py  test_quality.py  test_r2.py  test_rest_api_collector.py  test_rest_api_integration.py  test_sync_catalog_cli.py  test_transformer.py  test_upload_cli.py
domains/integration/openclaw/: pyproject.toml
domains/integration/openclaw/src/: app.py  applier.py  config.py  health.py  logging_config.py  planner.py  store.py  webhook.py
domains/integration/openclaw/tests/: test_dry_run_guard.py  test_health.py  test_planner.py  test_webhook_modal.py  test_webhook_retry.py
domains/pseudolab/ingestion/: .env.example  config.yaml  pyproject.toml
domains/pseudolab/ingestion/dags/: supabase_daily.py
domains/pseudolab/ingestion/src/pseudolab_etl/: catalog_sync.py  cli.py  config.py  d1.py  extractor.py  logging_config.py  notify.py  pii.py  r2_archive.py  schema.py  table_registry.py  type_mapping.py
domains/pseudolab/ingestion/tests/: conftest.py  test_pii.py  test_schema.py  test_table_registry.py  test_type_mapping.py
infra/: README.md  experiment-team.env.example  experiment.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
(+187 files in other folders)
