[project]
name = "pseudolab-data-platform"
version = "0.1.0"
requires-python = ">=3.11"

[dependency-groups]
dev = [
  "ruff>=0.8",
  "pytest>=8.0",
]

[tool.uv.workspace]
members = [
  "domains/github/ingestion",
  "domains/discord/ingestion",
  "domains/members/ingestion",
  "domains/linkedin/ingestion",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["domains"]
pythonpath = ["domains/github/ingestion/src", "domains/discord/ingestion/src", "domains/members/ingestion/src"]
